--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/common.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>css/iconfont/iconfont.css">
+    <link rel="stylesheet" href="<%= BASE_URL %>libs/swiper-4.1.0.min.css">
+    <script src='<%= BASE_URL %>libs/swiper-4.1.0.min.js'></script>
     <title>miaomiaody</title>
+    <style>
+      #app{display:flex};
+      #app>div{margin:0 auto;height:100%}
+    </style>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but miaomiaody doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <div id="app">
+      <div>喵喵网正努力加载中...</div>
+    </div>
   </body>
 </html>
