--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <script src='<%= BASE_URL %>libs/swiper-4.1.0.min.js'></script>
     <title>miaomiaody</title>
     <style>
-      #app{display:flex};
-      #app>div{margin:0 auto;height:100%}
+      #app{display:flex;height:100%}
+      #app div {margin:auto}
     </style>
   </head>
   <body>
